--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,9 +1,14 @@
-div.container {
+*{box-sizing: border-box;}
+
+body, html {
    width: 100%;
-   border: 1px solid gray;
+   margin: 0;
+   .container {
+      width: 100%;
+   }
 }
 
-header, footer {
+.header, .footer {
    padding: 1em;
    color: white;
    background-color: black;
@@ -13,7 +18,6 @@ header, footer {
 
 footer {
    border-top:1px solid white;
-
 }
 
 lnav {
