--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -7,15 +7,31 @@ body, html {
   body .container, html .container {
     width: 100%; }
 
+.header {
+  width: 100%;
+  background-image: url("./images/bitcoinHeader.jpeg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  height: 250px; }
+  .header .headerCover {
+    width: 100%;
+    height: 100%;
+    z-index: 10;
+    background: rgba(50, 50, 50, 0.7);
+    color: white;
+    padding-top: 50px; }
+    .header .headerCover p {
+      font-style: italic; }
+
 .header, .footer {
-  padding: 1em;
-  color: white;
-  background-color: black;
   clear: left;
   text-align: center; }
 
-footer {
-  border-top: 1px solid white; }
+.footer {
+  color: white;
+  background: rgba(50, 50, 50, 0.7);
+  padding: 1em; }
 
 lnav {
   float: left;
