--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,5 +1,7 @@
 *{box-sizing: border-box;}
 
+// Background Image -> https://pixabay.com/en/bitcoin-economy-currency-finance-1995332/
+
 body, html {
    width: 100%;
    margin: 0;
@@ -8,16 +10,35 @@ body, html {
    }
 }
 
+.header {
+   width: 100%;
+   background-image: url('./images/bitcoinHeader.jpeg');
+   background-size: cover;
+   background-repeat: no-repeat;
+   background-position: 50% 50%;
+   height: 250px;
+   .headerCover {
+      width: 100%;
+      height: 100%;
+      z-index: 10;
+      background: rgba(50,50,50, 0.7);
+      color: white;
+      padding-top: 50px;
+      p {
+         font-style: italic;
+      }
+   }
+}
+
 .header, .footer {
-   padding: 1em;
-   color: white;
-   background-color: black;
    clear: left;
    text-align: center;
 }
 
-footer {
-   border-top:1px solid white;
+.footer {
+   color: white;
+   background: rgba(50,50,50, 0.7);
+   padding: 1em;
 }
 
 lnav {
