--- a/styles/main.css
+++ b/styles/main.css
@@ -89,7 +89,7 @@ body, html {
   border: 4px solid #f3f3f3;
   border-radius: 12px;
   padding: 15px;
-  background-color: rgba(50, 50, 50, 0.9); }
+  background-color: rgba(50, 50, 50, 0.8); }
   .avgCapacity h2 {
     color: #FB7E37;
     text-shadow: 1px 1px #f3f3f3; }
@@ -116,7 +116,7 @@ body, html {
     border: 4px solid #f3f3f3;
     border-radius: 12px;
     padding: 15px 0 15px 0;
-    background-color: rgba(50, 50, 50, 0.9); }
+    background-color: rgba(50, 50, 50, 0.8); }
     .valuesContainer .valueBox .valTitle {
       margin: 0;
       color: #FB7E37;
@@ -126,12 +126,10 @@ body, html {
       color: #f3f3f3; }
     .valuesContainer .valueBox input {
       margin: 4px; }
-    .valuesContainer .valueBox .rangeBars {
-      color: blue; }
     .valuesContainer .valueBox .valInput {
       text-align: center;
       border: none;
-      background-color: rgba(50, 50, 50, 0.9);
+      background-color: rgba(50, 50, 50, 0.8);
       color: #FB7E37; }
   @media screen and (min-width: 525px) {
     .valuesContainer .valueBox {
@@ -157,10 +155,37 @@ a:visited {
   color: lightblue;
   font-weight: bold; }
 
-article {
-  margin-left: 170px;
-  padding: 1em;
-  overflow: hidden;
-  min-width: 15%; }
+input[type=range] {
+  -webkit-appearance: none;
+  width: 80%;
+  background: transparent;
+  outline: none; }
+
+input[type=range]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  height: 25px;
+  width: 25px;
+  border-radius: 50%;
+  background-image: url("./images/bitcoin.png");
+  cursor: pointer;
+  margin-top: -5px;
+  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d; }
+
+input[type=range]::-webkit-slider-runnable-track {
+  width: 80%;
+  height: 15px;
+  cursor: pointer;
+  background-image: url("./images/chain.png");
+  background-size: fill;
+  border-radius: 1.3px; }
+
+input[type=range]::-ms-track {
+  width: 80%;
+  height: 8.4px;
+  cursor: pointer;
+  background: transparent;
+  border-color: transparent;
+  border-width: 16px 0;
+  color: transparent; }
 
 /*# sourceMappingURL=main.css.map */
