--- a/styles/main.scss
+++ b/styles/main.scss
@@ -6,7 +6,7 @@ $offYellow: #FDDD62;
 $offOrange: #FB7E37;
 $offWhite: #f3f3f3;
 
-$valueBoxes: rgba(50,50,50, 0.9);
+$valueBoxes: rgba(50,50,50, 0.8);
 
 
 body, html {
@@ -163,9 +163,6 @@ body, html {
       input{
          margin: 4px;
       }
-      .rangeBars {
-         color: blue;
-      }
       .valInput {
          text-align: center;
          border: none;
@@ -194,7 +191,6 @@ body, html {
       width: 50%;
    }
 }
-
 a {
    text-decoration: none;
    color: $offOrange;
@@ -206,10 +202,43 @@ a:visited {
    font-weight: bold;
 }
 
-article {
-   margin-left: 170px;
-   padding: 1em;
-   overflow: hidden;
-   min-width: 15%;
-   
+// SLIDER STYLE -Help from https://css-tricks.com/styling-cross-browser-compatible-range-inputs-css/
+input[type=range] {
+  -webkit-appearance: none;
+  width: 80%; 
+  background: transparent;
+  outline: none;
 }
+input[type=range]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  height: 25px;
+  width: 25px;
+  border-radius: 50%;
+  background-image: url('./images/bitcoin.png');
+  cursor: pointer;
+  margin-top: -5px; 
+  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+}
+input[type=range]::-webkit-slider-runnable-track {
+  width: 80%;
+  height: 15px;
+  cursor: pointer;
+  background-image: url('./images/chain.png');
+  background-size: fill;
+  border-radius: 1.3px;
+}
+input[type=range]::-ms-track {
+  width: 80%;
+  height: 8.4px;
+  cursor: pointer;
+  background: transparent;
+  border-color: transparent;
+  border-width: 16px 0;
+  color: transparent;
+}
+
+
+
+
+
+
